# rsm-2.0

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-01-12-202403_create_users/: up.sql
backend/src/: models.rs  schema.rs
diesel_demo/: .env  Cargo.toml  diesel.toml
diesel_demo/src/: lib.rs
